# DM840-Algorithms-in-Cheminformatics

./: .gitignore  CMakeLists.txt  Copy and run on server.md  a1.sh  filething.py  git.sh  hostlist  prepare.sh  readme.md  run.sh  solvecatalan.sh  solvecatalanonimada.sh  solvecatalansingle.sh  test.sh
Assignment 1 - Code/: a1.sh
Assignment 1 - Code/catalan/: doIt.py  solve.sh  solve_imada.sh
Assignment 1 - Code/catalan/rules/: markForConversion.gml  reattachExternalEdge.gml  removeAlreadyAttached.gml
Assignment 1 - Code/catalan/summary/: MakefileClean  MakefileImpl
Assignment 1 - Code/formose/: aldol_addition_backward.gml  keto_enol_backward.gml
Assignment 1 - Code/tmp/catalan/: doIt.py
Assignment 1 - Report/: main.tex
Assignment 2 - Code/Option1_Atom-Atom-Mapping/: Makefile  wrapper.sh
Assignment 2 - Report/: main.tex
assignment1/: setEnv.sh  solvecatalan.sh  solvecatalanonimada.sh  test.sh
assignment1/catalan/: doIt.py  rules.py
assignment1/catalan/rules/: markForConversion.gml  reattachExternalEdge.gml  removeAlreadyAttached.gml  removeInterREdge.gml  removeInterREdge.gnl  (+2 more)
assignment1/formose/: aldol_addition_backward.gml  aldol_addition_forward.gml  doStuff.py  keto_enol_backward.gml  keto_enol_forward.gml
assignment1/ppp/: petriNet.py
assignment1/reindeer/: reindeer.py
assignment2/Lipids/: aldol_addition_backward.gml  doStuff.py  grammar.py  keto_enol_forward.gml
assignment2/Option1_Atom-Atom-Mapping/: README.rst  main.cpp  test.py  wrapper.sh
formose/: doStuff.py
playingaround/: ping.py
summary/: Makefile  master.tex
(+16 files in other folders)
